--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,23 @@
 {
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
-  "name": "si-telecom",
-  "version": "1.0.0",
-  "description": "SI Telecom Market",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "author": "Andrey Novikov",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
-    "next": "^14.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "14.1.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.4",
-    "typescript": "^5.4.3"
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
+    "sass": "^1.72.0"
   }
 }
