--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flake8==7.0.0
 Flask==3.0.2
 Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
