--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "jwt-decode": "^4.0.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18"
   },
