--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.2.0",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18"
   },
   "devDependencies": {
