--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.5.0",
     "@tabler/icons-react": "^3.2.0",
-    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "simplebar-react": "^3.2.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
