--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
+    "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
