--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@minoru/react-dnd-treeview": "^3.4.4",
     "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
@@ -22,6 +23,7 @@
     "next-auth": "^5.0.0-beta.16",
     "pretty-bytes": "^6.1.1",
     "react": "^18",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "simplebar-react": "^3.2.5",
