--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.5.0",
+    "@mui/x-tree-view": "^7.11.1",
     "@tabler/icons-react": "^3.2.0",
     "altcha": "^0.6.0",
     "moment": "^2.30.1",
