--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@minoru/react-dnd-treeview": "^3.4.4",
-    "@mui/icons-material": "^5.15.18",
+    "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.18",
-    "@mui/x-date-pickers": "^7.5.0",
-    "@mui/x-tree-view": "^7.11.1",
-    "@tabler/icons-react": "^3.2.0",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.13.0",
+    "@mui/x-tree-view": "^7.13.0",
+    "@tabler/icons-react": "^3.12.0",
     "altcha": "^0.6.0",
     "moment": "^2.30.1",
-    "next": "14.1.4",
+    "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.16",
     "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "simplebar-react": "^3.2.5",
+    "simplebar-react": "^3.2.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "sass": "^1.72.0"
+    "eslint-config-next": "^14.2.5",
+    "sass": "^1.77.8"
   }
 }
