Fix build errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "javascript.preferences.quoteStyle": "single"
+    "javascript.preferences.quoteStyle": "single",
+    "eslint.workingDirectories": [
+        {
+            "pattern": "frontend/*/"
+        }
+    ]
 }
