--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.30.1",
     "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
+    "notistack": "^3.0.1",
     "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dnd": "^16.0.1",
