--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "sharp": "^0.33.5",
     "simplebar-react": "^3.2.6",
     "zod": "^3.23.8"
   },
