--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.12.0",
     "altcha": "^0.6.0",
     "currency.js": "^2.0.4",
+    "json-sorted-stringify": "^1.0.0",
     "moment": "^2.30.1",
     "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
