--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.13.0",
     "@mui/x-tree-view": "^7.13.0",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@tabler/icons-react": "^3.12.0",
     "altcha": "^0.6.0",
     "currency.js": "^2.0.4",
