--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==2.1.5
 mccabe==0.7.0
 peewee==3.17.1
 pillow==10.4.0
+psycopg2-binary==2.9.10
 pycodestyle==2.11.1
 pycparser==2.21
 pyflakes==3.2.0
