--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ pycparser==2.21
 pyflakes==3.2.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
+uWSGI==2.0.28
 Werkzeug==3.0.1
 wtf-peewee==3.0.5
 WTForms==3.1.2
