--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mdxeditor/editor": "^3.11.5",
     "@minoru/react-dnd-treeview": "^3.4.4",
     "@mui/icons-material": "^5.16.7",
@@ -19,7 +19,7 @@
     "@mui/x-date-pickers": "^7.13.0",
     "@mui/x-tree-view": "^7.13.0",
     "@pbe/react-yandex-maps": "^1.2.5",
-    "@tabler/icons-react": "^3.12.0",
+    "@tabler/icons-react": "^3.24.0",
     "altcha": "^0.6.0",
     "currency.js": "^2.0.4",
     "json-sorted-stringify": "^1.0.0",
@@ -27,6 +27,7 @@
     "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "notistack": "^3.0.1",
+    "postgres": "^3.4.5",
     "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dnd": "^16.0.1",
@@ -34,10 +35,12 @@
     "react-dropzone": "^14.2.3",
     "react-easy-sort": "^1.6.0",
     "react-markdown": "^9.0.1",
+    "react-slick": "^0.31.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
     "simplebar-react": "^3.2.6",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
