--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,32 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@iminside/react-yandex-maps": "^1.2.7",
     "@mdxeditor/editor": "^3.11.5",
-    "@minoru/react-dnd-treeview": "^3.4.4",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.16.7",
-    "@mui/x-date-pickers": "^7.13.0",
-    "@mui/x-tree-view": "^7.13.0",
-    "@pbe/react-yandex-maps": "^1.2.5",
+    "@minoru/react-dnd-treeview": "^3.5.3",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/lab": "^6.0.1-beta.36",
+    "@mui/material": "^6.5.0",
+    "@mui/x-date-pickers": "^8.17.0",
+    "@mui/x-tree-view": "^8.17.0",
     "@tabler/icons-react": "^3.24.0",
     "altcha": "^0.6.0",
     "currency.js": "^2.0.4",
     "json-sorted-stringify": "^1.0.0",
     "moment": "^2.30.1",
-    "next": "^14.1.4",
-    "next-auth": "^5.0.0-beta.16",
-    "notistack": "^3.0.1",
+    "next": "^15.5.6",
+    "next-auth": "^5.0.0-beta.29",
+    "notistack": "^3.0.2",
     "postgres": "^3.4.5",
     "pretty-bytes": "^6.1.1",
-    "react": "^18",
+    "react": "^19.2.0",
     "react-dnd": "^16.0.1",
-    "react-dom": "^18",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.2.3",
     "react-easy-sort": "^1.6.0",
     "react-markdown": "^9.0.1",
@@ -44,8 +44,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "^14.1.4",
+    "@eslint/eslintrc": "^3.3.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^15.5.6",
     "sass": "^1.77.8"
   }
 }
