Upgrades, second iteration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,39 +9,41 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@iminside/react-yandex-maps": "^1.2.7",
-    "@mdxeditor/editor": "^3.11.5",
+    "@mdxeditor/editor": "^3.48.0",
     "@minoru/react-dnd-treeview": "^3.5.3",
     "@mui/icons-material": "^7.3.5",
     "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^7.3.5",
+    "@mui/material-nextjs": "^7.3.5",
     "@mui/x-date-pickers": "^8.17.0",
     "@mui/x-tree-view": "^8.17.0",
-    "@tabler/icons-react": "^3.24.0",
-    "altcha": "^0.6.0",
+    "@tabler/icons-react": "^3.35.0",
+    "altcha": "^0.6.7",
     "currency.js": "^2.0.4",
-    "json-sorted-stringify": "^1.0.0",
+    "json-sorted-stringify": "^1.0.2",
     "moment": "^2.30.1",
     "next": "^15.5.6",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^5.0.0-beta.30",
     "notistack": "^3.0.2",
-    "postgres": "^3.4.5",
-    "pretty-bytes": "^6.1.1",
+    "postgres": "^3.4.7",
+    "pretty-bytes": "^7.1.0",
     "react": "^19.2.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^19.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-easy-sort": "^1.6.0",
-    "react-markdown": "^9.0.1",
+    "react-dropzone": "^14.3.8",
+    "react-easy-sort": "^1.8.0",
+    "react-markdown": "^10.1.0",
     "react-slick": "^0.31.0",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
-    "sharp": "^0.33.5",
-    "simplebar-react": "^3.2.6",
+    "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.5",
+    "simplebar-react": "^3.3.2",
     "slick-carousel": "^1.8.1",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
