--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "frontend",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "docker-build": "sudo docker compose build && sudo docker tag simarket simarket:$npm_package_version",
+    "docker-deploy": "sudo docker compose up -d",
     "start": "next start",
     "lint": "eslint ."
   },
